corpus/kernel/6.8/arch/x86/index.md
---
collection: kernel
version: "6.8"
title: "x86-specific Documentation"
source_url: https://www.kernel.org/doc/html/v6.8/arch/x86/index.html
fetched_at: 2026-08-21T03:29:04+00:00
---
# x86-specific Documentation

- [1. The Linux/x86 Boot Protocol](boot.md)
  - [1.1. Memory Layout](boot.md#memory-layout)
  - [1.2. The Real-Mode Kernel Header](boot.md#the-real-mode-kernel-header)
  - [1.3. Details of Header Fields](boot.md#details-of-header-fields)
  - [1.4. The kernel_info](boot.md#the-kernel-info)
  - [1.5. Details of the kernel_info Fields](boot.md#details-of-the-kernel-info-fields)
  - [1.6. The Image Checksum](boot.md#the-image-checksum)
  - [1.7. The Kernel Command Line](boot.md#the-kernel-command-line)
  - [1.8. Memory Layout of The Real-Mode Code](boot.md#memory-layout-of-the-real-mode-code)
  - [1.9. Sample Boot Configuration](boot.md#sample-boot-configuration)
  - [1.10. Loading The Rest of The Kernel](boot.md#loading-the-rest-of-the-kernel)
  - [1.11. Special Command Line Options](boot.md#special-command-line-options)
  - [1.12. Running the Kernel](boot.md#running-the-kernel)
  - [1.13. Advanced Boot Loader Hooks](boot.md#advanced-boot-loader-hooks)
  - [1.14. 32-bit Boot Protocol](boot.md#bit-boot-protocol)
  - [1.15. 64-bit Boot Protocol](boot.md#id1)
  - [1.16. EFI Handover Protocol (deprecated)](boot.md#efi-handover-protocol-deprecated)
- [2. DeviceTree Booting](booting-dt.md)
- [3. x86 Feature Flags](cpuinfo.md)
  - [3.1. Introduction](cpuinfo.md#introduction)
  - [3.2. How are feature flags created?](cpuinfo.md#how-are-feature-flags-created)
  - [3.3. Naming of Flags](cpuinfo.md#naming-of-flags)
  - [3.4. Flags are missing when one or more of these happen](cpuinfo.md#flags-are-missing-when-one-or-more-of-these-happen)
- [4. x86 Topology](topology.md)
  - [4.1. Package](topology.md#package)
  - [4.2. Cores](topology.md#cores)
  - [4.3. Threads](topology.md#threads)
  - [4.4. System topology examples](topology.md#system-topology-examples)
- [5. Kernel level exception handling](exception-tables.md)
- [6. Kernel Stacks](kernel-stacks.md)
  - [6.1. Kernel stacks on x86-64 bit](kernel-stacks.md#kernel-stacks-on-x86-64-bit)
  - [6.2. Printing backtraces on x86](kernel-stacks.md#printing-backtraces-on-x86)
- [7. Kernel Entries](entry_64.md)
- [8. Early Printk](earlyprintk.md)
  - [8.1. Hardware requirements](earlyprintk.md#hardware-requirements)
  - [8.2. Software requirements](earlyprintk.md#software-requirements)
  - [8.3. Testing](earlyprintk.md#testing)
- [9. ORC unwinder](orc-unwinder.md)
  - [9.1. Overview](orc-unwinder.md#overview)
  - [9.2. ORC vs frame pointers](orc-unwinder.md#orc-vs-frame-pointers)
  - [9.3. ORC vs DWARF](orc-unwinder.md#orc-vs-dwarf)
  - [9.4. ORC unwind table generation](orc-unwinder.md#orc-unwind-table-generation)
  - [9.5. Unwinder implementation details](orc-unwinder.md#unwinder-implementation-details)
  - [9.6. Etymology](orc-unwinder.md#etymology)
- [10. Zero Page](zero-page.md)
- [11. The TLB](tlb.md)
- [12. MTRR (Memory Type Range Register) control](mtrr.md)
  - [12.1. Phasing out MTRR use](mtrr.md#phasing-out-mtrr-use)
  - [12.2. Reading MTRRs from the shell](mtrr.md#reading-mtrrs-from-the-shell)
  - [12.3. Creating overlapping MTRRs](mtrr.md#creating-overlapping-mtrrs)
  - [12.4. Removing MTRRs from the C-shel](mtrr.md#removing-mtrrs-from-the-c-shel)
  - [12.5. Reading MTRRs from a C program using ioctl()'s](mtrr.md#reading-mtrrs-from-a-c-program-using-ioctl-s)
  - [12.6. Creating MTRRs from a C programme using ioctl()'s](mtrr.md#creating-mtrrs-from-a-c-programme-using-ioctl-s)
- [13. PAT (Page Attribute Table)](pat.md)
  - [13.1. PAT APIs](pat.md#pat-apis)
  - [13.2. Advanced APIs for drivers](pat.md#advanced-apis-for-drivers)
  - [13.3. MTRR effects on PAT / non-PAT systems](pat.md#mtrr-effects-on-pat-non-pat-systems)
  - [13.4. PAT debugging](pat.md#pat-debugging)
  - [13.5. PAT Initialization](pat.md#pat-initialization)
- [14. Hardware-Feedback Interface for scheduling on Intel Hardware](intel-hfi.md)
  - [14.1. Overview](intel-hfi.md#overview)
  - [14.2. The Hardware Feedback Interface](intel-hfi.md#the-hardware-feedback-interface)
  - [14.3. Implementation details for Linux](intel-hfi.md#implementation-details-for-linux)
  - [14.4. References](intel-hfi.md#references)
- [15. Control-flow Enforcement Technology (CET) Shadow Stack](shstk.md)
  - [15.1. CET Background](shstk.md#cet-background)
  - [15.2. Requirements to use Shadow Stack](shstk.md#requirements-to-use-shadow-stack)
  - [15.3. Application Enabling](shstk.md#application-enabling)
  - [15.4. Enabling arch_prctl()'s](shstk.md#enabling-arch-prctl-s)
  - [15.5. Proc Status](shstk.md#proc-status)
  - [15.6. Implementation of the Shadow Stack](shstk.md#implementation-of-the-shadow-stack)
- [16. x86 IOMMU Support](iommu.md)
  - [16.1. Basic stuff](iommu.md#basic-stuff)
  - [16.2. How is an I/O Virtual Address (IOVA) generated?](iommu.md#how-is-an-i-o-virtual-address-iova-generated)
  - [16.3. Intel Specific Notes](iommu.md#intel-specific-notes)
  - [16.4. AMD Specific Notes](iommu.md#amd-specific-notes)
  - [16.5. Fault reporting](iommu.md#fault-reporting)
  - [16.6. Kernel Log Samples](iommu.md#kernel-log-samples)
- [17. Intel(R) TXT Overview](intel_txt.md)
  - [17.1. Trusted Boot Project Overview](intel_txt.md#trusted-boot-project-overview)
  - [17.2. Value Proposition for Linux or "Why should you care?"](intel_txt.md#value-proposition-for-linux-or-why-should-you-care)
  - [17.3. How Does it Work?](intel_txt.md#how-does-it-work)
  - [17.4. Configuring the System](intel_txt.md#configuring-the-system)
- [18. AMD Memory Encryption](amd-memory-encryption.md)
  - [18.1. Secure Nested Paging (SNP)](amd-memory-encryption.md#secure-nested-paging-snp)
- [19. AMD HSMP interface](amd_hsmp.md)
  - [19.1. HSMP device](amd_hsmp.md#hsmp-device)
  - [19.2. HSMP sysfs interface](amd_hsmp.md#hsmp-sysfs-interface)
  - [19.3. An example](amd_hsmp.md#an-example)
- [20. Intel Trust Domain Extensions (TDX)](tdx.md)
  - [20.1. TDX Host Kernel Support](tdx.md#tdx-host-kernel-support)
  - [20.2. TDX Guest Support](tdx.md#tdx-guest-support)
  - [20.3. Attestation](tdx.md#attestation)
  - [20.4. References](tdx.md#references)
- [21. Page Table Isolation (PTI)](pti.md)
  - [21.1. Overview](pti.md#overview)
  - [21.2. Page Table Management](pti.md#page-table-management)
  - [21.3. Overhead](pti.md#overhead)
  - [21.4. Possible Future Work](pti.md#possible-future-work)
  - [21.5. Testing](pti.md#testing)
  - [21.6. Debugging](pti.md#debugging)
- [22. Microarchitectural Data Sampling (MDS) mitigation](mds.md)
  - [22.1. Overview](mds.md#overview)
  - [22.2. Exposure assumptions](mds.md#exposure-assumptions)
  - [22.3. Mitigation strategy](mds.md#mitigation-strategy)
  - [22.4. Kernel internal mitigation modes](mds.md#kernel-internal-mitigation-modes)
  - [22.5. Mitigation points](mds.md#mitigation-points)
- [23. The Linux Microcode Loader](microcode.md)
  - [23.1. Early load microcode](microcode.md#early-load-microcode)
  - [23.2. Late loading](microcode.md#late-loading)
  - [23.3. Why is late loading dangerous?](microcode.md#why-is-late-loading-dangerous)
  - [23.4. Builtin microcode](microcode.md#builtin-microcode)
- [24. User Interface for Resource Control feature](resctrl.md)
  - [24.1. Info directory](resctrl.md#info-directory)
  - [24.2. Resource alloc and monitor groups](resctrl.md#resource-alloc-and-monitor-groups)
  - [24.3. Notes on cache occupancy monitoring and control](resctrl.md#notes-on-cache-occupancy-monitoring-and-control)
  - [24.4. Memory bandwidth Allocation and monitoring](resctrl.md#memory-bandwidth-allocation-and-monitoring)
  - [24.5. Cache Pseudo-Locking](resctrl.md#cache-pseudo-locking)
  - [24.6. Examples for RDT Monitoring along with allocation usage](resctrl.md#examples-for-rdt-monitoring-along-with-allocation-usage)
  - [24.7. Intel RDT Errata](resctrl.md#intel-rdt-errata)
- [25. TSX Async Abort (TAA) mitigation](tsx_async_abort.md)
  - [25.1. Overview](tsx_async_abort.md#overview)
  - [25.2. Mitigation strategy](tsx_async_abort.md#mitigation-strategy)
  - [25.3. Kernel internal mitigation modes](tsx_async_abort.md#kernel-internal-mitigation-modes)
- [26. Bus lock detection and handling](buslock.md)
  - [26.1. Problem](buslock.md#problem)
  - [26.2. Detection](buslock.md#detection)
  - [26.3. Software handling](buslock.md#software-handling)
  - [26.4. Usages](buslock.md#usages)
  - [26.5. Guidance](buslock.md#guidance)
- [27. USB Legacy support](usb-legacy-support.md)
- [28. i386 Support](i386/index.md)
  - [28.1. IO-APIC](i386/IO-APIC.md)
- [29. x86_64 Support](x86_64/index.md)
  - [29.1. AMD64 Specific Boot Options](x86_64/boot-options.md)
  - [29.2. General note on [U]EFI x86_64 support](x86_64/uefi.md)
  - [29.3. Memory Management](x86_64/mm.md)
  - [29.4. 5-level paging](x86_64/5level-paging.md)
  - [29.5. Fake NUMA For CPUSets](x86_64/fake-numa-for-cpusets.md)
  - [29.6. Firmware support for CPU hotplug under Linux/x86-64](x86_64/cpu-hotplug-spec.md)
  - [29.7. Configurable sysfs parameters for the x86-64 machine check code](x86_64/machinecheck.md)
  - [29.8. Using FS and GS segments in user space applications](x86_64/fsgs.md)
- [30. In-Field Scan](ifs.md)
  - [30.1. Introduction](ifs.md#introduction)
  - [30.2. IFS Image](ifs.md#ifs-image)
  - [30.3. IFS Image Loading](ifs.md#ifs-image-loading)
  - [30.4. Running tests](ifs.md#running-tests)
  - [30.5. Driver design choices](ifs.md#driver-design-choices)
- [31. Shared Virtual Addressing (SVA) with ENQCMD](sva.md)
  - [31.1. Background](sva.md#background)
  - [31.2. Shared Hardware Workqueues](sva.md#shared-hardware-workqueues)
  - [31.3. ENQCMD](sva.md#enqcmd)
  - [31.4. Process Address Space Tagging](sva.md#process-address-space-tagging)
  - [31.5. PASID Management](sva.md#pasid-management)
  - [31.6. PASID Life Cycle Management](sva.md#pasid-life-cycle-management)
  - [31.7. Relationships](sva.md#relationships)
  - [31.8. FAQ](sva.md#faq)
  - [31.9. References](sva.md#references)
- [32. Software Guard eXtensions (SGX)](sgx.md)
  - [32.1. Overview](sgx.md#overview)
  - [32.2. Enclave Page Cache](sgx.md#enclave-page-cache)
  - [32.3. Application interface](sgx.md#application-interface)
  - [32.4. ksgxd](sgx.md#ksgxd)
  - [32.5. Launch Control](sgx.md#launch-control)
  - [32.6. Encryption engines](sgx.md#encryption-engines)
  - [32.7. Usage Models](sgx.md#usage-models)
  - [32.8. Impact of Potential Kernel SGX Bugs](sgx.md#impact-of-potential-kernel-sgx-bugs)
  - [32.9. Virtual EPC](sgx.md#virtual-epc)
- [33. Feature status on x86 architecture](features.md)
- [34. x86-specific ELF Auxiliary Vectors](elf_auxvec.md)
  - [34.1. Introduction](elf_auxvec.md#introduction)
  - [34.2. The exposed auxiliary vectors](elf_auxvec.md#the-exposed-auxiliary-vectors)
- [35. Using XSTATE features in user space applications](xstate.md)
  - [35.1. The purpose for dynamic features](xstate.md#the-purpose-for-dynamic-features)
  - [35.2. Using dynamically enabled XSTATE features in user space applications](xstate.md#using-dynamically-enabled-xstate-features-in-user-space-applications)
  - [35.3. Dynamic features in signal frames](xstate.md#dynamic-features-in-signal-frames)
  - [35.4. Dynamic features for virtual machines](xstate.md#dynamic-features-for-virtual-machines)
